# poing2

./: .gitignore  Makefile.am  README.md  configure.ac  vdw.pymol
conda/poing2/: conda_build_config.yaml  meta.yaml
conda/poing2-scripts/: meta.yaml
data/: AA.gperf  atoms.gperf  boundary-ala-nosec.data  boundary-alpha.data  boundary-beta.data  boundary-general-nosec.data  boundary-gly-sym-nosec.data  boundary-prepro.data  boundary-pro.data
scripts/: Makefile.PL  build_config.pl  final_model.pl  pdb2springs.pl  pulchra_all.pl
scripts/lib/Bio/Protein/: Poing2.pm
scripts/lib/Bio/Protein/Poing2/: Atom.pm  BondAngle.pm  Class.pm  Data.pm  Fourmer.pm  HBond.pm  Handedness.pm  LinearSpring.pm  Modules.pm  Query.pm  Ramachandran.pm  Residue.pm  Template.pm  Vector.pm
scripts/lib/Bio/Protein/Poing2/Data/: Fourmer.pm
scripts/lib/Bio/Protein/Poing2/Filter/Aln/: Known.pm
scripts/lib/Bio/Protein/Poing2/Filter/Atom/: Backbone.pm
scripts/lib/Bio/Protein/Poing2/Filter/Pair/: ConsecutiveOnly.pm  MaxDistance.pm  PruneLong.pm  SeqSep.pm
scripts/lib/Bio/Protein/Poing2/Filter/Residue/: Known.pm
scripts/lib/Bio/Protein/Poing2/Fourmer/: Calculated.pm  Fixed.pm
scripts/lib/Bio/Protein/Poing2/IO/: Fasta.pm  FastaAlignment.pm  PDB.pm  Psipred.pm
scripts/lib/Bio/Protein/Poing2/Query/: HydrophobicSprings.pm
scripts/lib/Bio/Protein/Poing2/Ramachandran/: Data.pm  List.pm
scripts/t/: Bio-Protein-Poing2-Atom.t  Bio-Protein-Poing2-Class.t  Bio-Protein-Poing2-Filter-Atom-Backbone.t  Bio-Protein-Poing2-Filter-Pair-SeqSep.t  Bio-Protein-Poing2-Fourmer.pm  Bio-Protein-Poing2-Fourmer.t  Bio-Protein-Poing2-IO-Fasta.t  Bio-Protein-Poing2-IO-FastaAlignment.t  Bio-Protein-Poing2-IO-PDB.t  Bio-Protein-Poing2-IO-Psipred.t  Bio-Protein-Poing2-LinearSpring.t  Bio-Protein-Poing2-Query.t  Bio-Protein-Poing2-Residue.t  Bio-Protein-Poing2-Template.pm  Bio-Protein-Poing2-Template.t  Bio-Protein-Poing2-Vector.t
src/: bond_angle.c  bond_angle.h  debug.c  debug.h  leapfrog.c  leapfrog.h  linear_spring.c  linear_spring.h  model.c  model.h  poing.c  profile.c  profile.h  rama.c  rama.h  rattle.c  rattle.h  record.c  record.h  residue.c  residue.h  rk4.c  rk4.h  springreader.c  springreader.h  sterics.c  sterics.h  torsion_spring.c  torsion_spring.h  vector.c  vector.h
t/: bond_angle.c  linear_spring.c  model.c  profile.c  rama.c  record.c  residue.c  rk4.c  springreader.c  sterics.c  tap.c  tap.h  torsion_spring.c  vector.c
